--- a/notebook/Model_Training.ipynb
+++ b/notebook/Model_Training.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 120,
    "id": "03e7596b",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 121,
    "id": "e7f80716",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 122,
    "id": "e74a6f2a",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 201,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,18 +173,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 123,
    "id": "1721bf26",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X=df.drop(columns=['math_score','parental_level_of_education'])\n",
+    "X=df.drop(columns=['math_score'],axis=1)\n",
     "y=df['math_score']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 124,
    "id": "8c8a4ace",
    "metadata": {},
    "outputs": [],
@@ -194,26 +194,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 125,
    "id": "21e0fb85",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numerical columns: ['reading_score', 'writing_score']\n",
+      "Ordinal columns: ['parental_level_of_education']\n",
+      "Nominal columns: ['gender', 'race_ethnicity', 'lunch', 'test_preparation_course']\n"
+     ]
+    }
+   ],
    "source": [
     "numerical_col=[feature for feature in X.columns if X[feature].dtype!='O']\n",
-    "#ordinal_col=['parental_level_of_education']\n",
-    "nominal_col=[feature for feature in X.columns if feature not in numerical_col+ordinal_col]"
+    "ordinal_col=['parental_level_of_education']\n",
+    "nominal_col=[feature for feature in X.columns if feature not in numerical_col and feature not in ordinal_col]\n",
+    "\n",
+    "print('Numerical columns:',numerical_col)\n",
+    "print('Ordinal columns:',ordinal_col)\n",
+    "print('Nominal columns:',nominal_col)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 126,
    "id": "3065f2c1",
    "metadata": {},
    "outputs": [],
    "source": [
     "Scaling_transformer=StandardScaler()\n",
-    "OneHot_transformer=OneHotEncoder(sparse_output=False,handle_unknown='ignore')\n",
-    "Log_transformer=FunctionTransformer(func=np.log1p, validate=False)\n",
+    "OneHot_transformer=OneHotEncoder(sparse_output=False,handle_unknown='ignore',drop='first')\n",
     "education_order = [\n",
     "    ['some high school', 'high school', 'some college', \"associate's degree\", \"bachelor's degree\", \"master's degree\"]\n",
     "]\n",
@@ -222,36 +235,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
-   "id": "36c83902",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "log_and_scale = Pipeline([\n",
-    "    ('log', Log_transformer),\n",
-    "    ('scale', Scaling_transformer)\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 127,
    "id": "9ce8e570",
    "metadata": {},
    "outputs": [],
    "source": [
     "Preprocessor = ColumnTransformer(\n",
     "    transformers=[\n",
-    "        ('num', log_and_scale, numerical_col),\n",
-    "        #('ord', ord_transformer, ordinal_col),\n",
+    "        ('num', Scaling_transformer, numerical_col),\n",
+    "        ('ord', ord_transformer, ordinal_col),\n",
     "        ('nom', OneHot_transformer, nominal_col)\n",
-    "    ]\n",
+    "    ],verbose_feature_names_out=False\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 129,
+   "id": "334cbe54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_transformed=Preprocessor.fit_transform(X_train)\n",
+    "test_transformed=Preprocessor.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "15b070d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transformed_feature_names = Preprocessor.get_feature_names_out()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "67cead7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_transformed_df = pd.DataFrame(\n",
+    "    train_transformed, \n",
+    "    columns=transformed_feature_names\n",
+    ")\n",
+    "\n",
+    "test_transformed_df = pd.DataFrame(\n",
+    "    test_transformed, \n",
+    "    columns=transformed_feature_names\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
    "id": "ca4c01e0",
    "metadata": {},
    "outputs": [],
@@ -262,17 +301,12 @@
     "    'Random Forest': RandomForestRegressor(random_state=42),\n",
     "    'XGBoost': XGBRegressor(random_state=42, verbosity=0),\n",
     "    'CatBoost': CatBoostRegressor(verbose=0, random_state=42)\n",
-    "}\n",
-    "\n",
-    "pipelines = {name: Pipeline([\n",
-    "    ('preprocessor', Preprocessor),\n",
-    "    ('model', model)\n",
-    "]) for name, model in models.items()}\n"
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 133,
    "id": "11dbe4a6",
    "metadata": {},
    "outputs": [
@@ -280,39 +314,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "               Model        MSE       MAE  R2 Score\n",
-      "4           CatBoost  35.282440  4.459682  0.855007\n",
-      "2      Random Forest  37.371257  4.673249  0.846423\n",
-      "3            XGBoost  44.871921  5.172839  0.815599\n",
-      "0  Linear Regression  45.470732  4.878106  0.813138\n",
-      "1      Decision Tree  61.977500  6.305000  0.745303\n"
+      "--- Training Linear Regression ---\n",
+      "--- Training Decision Tree ---\n",
+      "--- Training Random Forest ---\n",
+      "--- Training XGBoost ---\n",
+      "--- Training CatBoost ---\n",
+      "\n",
+      "--- Final Model R2 Scores ---\n",
+      "{'Linear Regression': 0.8815597679452446, 'Decision Tree': 0.7441834087838171, 'Random Forest': 0.8498842243383807, 'XGBoost': 0.8209482431411743, 'CatBoost': 0.8468233518808057}\n"
      ]
     }
    ],
    "source": [
-    "results = []\n",
+    "results = {}\n",
     "\n",
-    "for name, pipe in pipelines.items():\n",
-    "    # Fit on train data (preprocessor + model)\n",
-    "    pipe.fit(X_train, y_train)\n",
+    "for name, model in models.items():\n",
+    "    print(f\"--- Training {name} ---\")\n",
     "\n",
-    "    # Predict on test data\n",
-    "    y_pred = pipe.predict(X_test)\n",
+    "    # 1. Train the model using the transformed data\n",
+    "    model.fit(train_transformed_df, y_train)\n",
     "\n",
-    "    # Evaluate\n",
-    "    mse = mean_squared_error(y_test, y_pred)\n",
-    "    mae = mean_absolute_error(y_test, y_pred)\n",
-    "    r2 = r2_score(y_test, y_pred)\n",
+    "    # 2. Make predictions on the test set\n",
+    "    y_pred = model.predict(test_transformed_df)\n",
     "\n",
-    "    results.append({\n",
-    "        'Model': name,\n",
-    "        'MSE': mse,\n",
-    "        'MAE': mae,\n",
-    "        'R2 Score': r2\n",
-    "    })\n",
+    "    # 3. Evaluate the model (using a metric like R2 Score)\n",
+    "    from sklearn.metrics import r2_score\n",
+    "    test_score = r2_score(y_test, y_pred)\n",
     "\n",
-    "results_df = pd.DataFrame(results).sort_values(by='R2 Score', ascending=False)\n",
-    "print(results_df)\n"
+    "    # 4. Store the results\n",
+    "    results[name] = test_score\n",
+    "\n",
+    "# Print all final results\n",
+    "print(\"\\n--- Final Model R2 Scores ---\")\n",
+    "print(results)"
    ]
   }
  ],
@@ -332,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
