--- a/notebook/Model_Training.ipynb
+++ b/notebook/Model_Training.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 1,
    "id": "03e7596b",
    "metadata": {},
    "outputs": [],
@@ -37,6 +37,24 @@
     "from sklearn.pipeline import Pipeline  \n",
     "from catboost import CatBoostRegressor\n",
     "from xgboost import XGBRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7f663070",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.3.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.__version__)"
    ]
   },
   {
